fixed the section lines seperators on tablet displays

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,6 +160,11 @@ article:nth-of-type(2) {
   margin: 1rem 3rem 1rem 3rem;
 }
 
+.section-horizontal-line {
+  border-top: 1px solid rgb(0, 0, 0);
+  margin: 1rem 13% 1rem 13%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -343,6 +348,11 @@ figcaption {
   margin-top: 1.5rem;
 }
 
+.skills p {
+  text-transform: capitalize;
+  hyphens: auto;
+}
+
 /* .skills :nth-child(4) {
   margin-bottom: 0rem;
 } */
@@ -357,7 +367,7 @@ figcaption {
 }
 
 /* tablets */
-@media screen and (440px <= width <= 820px) {
+@media screen and (440px < width <= 820px) {
   body {
     margin: 0.5rem 1rem 0.5rem 1rem;
   }
@@ -373,7 +383,7 @@ figcaption {
   }
 
   h5 {
-    margin: 0;
+    margin: 0 0 0.25rem 0;
   }
 
   .h1-horizontal-line {
@@ -513,10 +523,9 @@ figcaption {
 
   form {
     margin-left: 0;
-    width: 86%;
+    width: 84%;
     align-self: center;
   }
-  
 
   .contact-header {
     margin: 0;
@@ -608,11 +617,6 @@ figcaption {
 
   .horizontal-line {
     margin: 0.75rem 37% 0.75rem 37%;
-  }
-
-  .section-horizontal-line {
-    border-top: 1px solid rgb(0, 0, 0);
-    margin: 1rem 13% 1rem 13%;
   }
 
   .vertical-line {
